--- a/LFM_SWW_RL_v3.ipynb
+++ b/LFM_SWW_RL_v3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
    "source": [
     "agent = Agent.create(\n",
     "    agent='tensorforce', environment=my_ACF_Env, update=64,\n",
-    "    optimizer=dict(optimizer='adam', learning_rate=1e-6),\n",
+    "    optimizer=dict(optimizer='adam', learning_rate=1e-3),\n",
     "    objective='policy_gradient', reward_estimation=dict(horizon=1)\n",
     ")"
    ]
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,22 @@
      "output_type": "stream",
      "text": [
       "0 iteration\n",
-      "current_best_performance = 28.651874226085383 1\n"
+      "current_best_performance = 28.688753521612146\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-876aa3d8faae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mterminal\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mactions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mact\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstates\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstates\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0mstates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mterminal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreward\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmy_ACF_Env\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mactions\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mactions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m         \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobserve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mterminal\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mterminal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreward\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mreward\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/tensorforce/environments/environment.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, actions)\u001b[0m\n\u001b[1;32m    553\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_max_episode_timesteps\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_timestep\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_max_episode_timesteps\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    554\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_num_parallel\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 555\u001b[0;31m             \u001b[0mstates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mterminal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreward\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_environment\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mactions\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mactions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    556\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    557\u001b[0m             \u001b[0mparallel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mterminal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreward\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_environment\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mactions\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mactions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-11-edad92aeccfb>\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, actions)\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m         \u001b[0;31m# compute the next ACF and next reward\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 75\u001b[0;31m         \u001b[0mnext_state\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnext_reward\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_next_state_and_reward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mactions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     76\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m         \u001b[0;31m# update the current ACF and reward\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-11-edad92aeccfb>\u001b[0m in \u001b[0;36mcompute_next_state_and_reward\u001b[0;34m(self, actions)\u001b[0m\n\u001b[1;32m    129\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    130\u001b[0m         \u001b[0;31m# apply freq. stacking and get ACF\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 131\u001b[0;31m         _, d_t = freq_stacking(\n\u001b[0m\u001b[1;32m    132\u001b[0m             \u001b[0mLFM_rx_subpulses\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    133\u001b[0m             \u001b[0mLFM_ref_subpulses\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/SWW_alg_ACF/freq_stacking_LFM_ACF_utils.py\u001b[0m in \u001b[0;36mfreq_stacking\u001b[0;34m(rx_subpulses, ref_subpulses, fc_RF_freqs, BW_RF_array, Bs_array, Fs_baseband)\u001b[0m\n\u001b[1;32m     53\u001b[0m             \u001b[0mref_subpulse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrx_subpulse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mBs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFs_baseband\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfcn_baseband\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFs_SWW\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m         )\n\u001b[0;32m---> 55\u001b[0;31m         \u001b[0mD_f\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mD_f\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mDn_f_read_for_stacking\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     56\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m     \u001b[0mD_f\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD_f\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# to make the matlab result equal to to python result\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -393,16 +408,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "27.723087659848794"
+       "28.688753521612146"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,31 +428,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[9.9e-01, 1.0e+00, 9.9e-01, 9.9e-01, 9.9e-01, 1.0e+00, 9.9e-01,\n",
-       "        1.0e+00, 1.0e+00, 9.9e-01, 1.0e+00, 1.0e+00, 9.9e-01, 1.0e+00,\n",
-       "        9.9e-01, 1.0e+00, 1.0e+00, 1.0e+00, 1.0e+00, 1.0e+00, 9.9e-01,\n",
-       "        9.9e-01, 9.9e-01, 1.0e+00, 9.9e-01, 1.0e+00, 9.9e-01, 9.9e-01,\n",
-       "        9.9e-01, 1.0e+00, 1.0e+00, 1.0e+00, 1.0e+00, 9.9e-01, 9.9e-01,\n",
-       "        1.0e+00, 9.9e-01, 9.9e-01, 1.0e+00, 9.9e-01, 9.9e-01, 1.0e+00,\n",
-       "        9.9e-01, 9.9e-01, 9.9e-01, 9.9e-01, 9.9e-01, 9.9e-01, 9.9e-01,\n",
+       "array([[9.9e-01, 9.9e-01, 9.9e-01, 9.9e-01, 1.0e+00, 9.9e-01, 1.0e+00,\n",
+       "        9.9e-01, 1.0e+00, 1.0e+00, 9.9e-01, 1.0e+00, 9.9e-01, 9.9e-01,\n",
+       "        1.0e+00, 1.0e+00, 1.0e+00, 9.9e-01, 1.0e+00, 1.0e+00, 9.9e-01,\n",
+       "        1.0e+00, 1.0e+00, 9.9e-01, 1.0e+00, 1.0e+00, 1.0e+00, 1.0e+00,\n",
+       "        1.0e+00, 9.9e-01, 1.0e+00, 9.9e-01, 1.0e+00, 9.9e-01, 1.0e+00,\n",
+       "        9.9e-01, 1.0e+00, 9.9e-01, 9.9e-01, 1.0e+00, 9.9e-01, 1.0e+00,\n",
+       "        1.0e+00, 1.0e+00, 1.0e+00, 1.0e+00, 1.0e+00, 1.0e+00, 9.9e-01,\n",
        "        1.0e+00],\n",
-       "       [2.0e+07, 2.0e+07, 1.9e+07, 2.0e+07, 2.0e+07, 1.9e+07, 1.9e+07,\n",
-       "        1.9e+07, 1.9e+07, 2.0e+07, 1.9e+07, 1.9e+07, 2.0e+07, 2.0e+07,\n",
-       "        1.9e+07, 2.0e+07, 1.9e+07, 1.9e+07, 2.0e+07, 2.0e+07, 1.9e+07,\n",
-       "        2.0e+07, 1.9e+07, 2.0e+07, 2.0e+07, 2.0e+07, 1.9e+07, 1.9e+07,\n",
-       "        1.9e+07, 2.0e+07, 1.9e+07, 1.9e+07, 1.9e+07, 1.9e+07, 2.0e+07,\n",
-       "        2.0e+07, 2.0e+07, 1.9e+07, 2.0e+07, 1.9e+07, 2.0e+07, 2.0e+07,\n",
-       "        2.0e+07, 1.9e+07, 1.9e+07, 1.9e+07, 1.9e+07, 1.9e+07, 2.0e+07,\n",
+       "       [1.9e+07, 1.9e+07, 1.9e+07, 2.0e+07, 2.0e+07, 1.9e+07, 2.0e+07,\n",
+       "        2.0e+07, 1.9e+07, 2.0e+07, 1.9e+07, 1.9e+07, 2.0e+07, 2.0e+07,\n",
+       "        1.9e+07, 1.9e+07, 2.0e+07, 2.0e+07, 1.9e+07, 2.0e+07, 2.0e+07,\n",
+       "        1.9e+07, 1.9e+07, 2.0e+07, 2.0e+07, 2.0e+07, 2.0e+07, 2.0e+07,\n",
+       "        2.0e+07, 1.9e+07, 2.0e+07, 1.9e+07, 1.9e+07, 2.0e+07, 2.0e+07,\n",
+       "        2.0e+07, 2.0e+07, 2.0e+07, 1.9e+07, 2.0e+07, 1.9e+07, 1.9e+07,\n",
+       "        1.9e+07, 1.9e+07, 1.9e+07, 1.9e+07, 1.9e+07, 2.0e+07, 1.9e+07,\n",
        "        1.9e+07]], dtype=float32)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
