--- a/LFM_SWW_RL_v3.ipynb
+++ b/LFM_SWW_RL_v3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -361,18 +361,17 @@
      "output_type": "stream",
      "text": [
       "0 iteration\n",
-      "current_best_performance = 27.198544898937712, time step = 1\n",
-      "current_best_performance = 27.66818677942945, time step = 2\n"
+      "current_best_performance = 28.329721767100267, time step = 1\n"
      ]
     },
     {
      "ename": "InvalidArgumentError",
-     "evalue": "  : Tensor had NaN values\n\t [[node agent/VerifyFinite_1/CheckNumerics (defined at /home/cs229/anaconda3/lib/python3.8/site-packages/tensorforce/core/utils/tensor_spec.py:319) ]] [Op:__inference_act_1085]\n\nErrors may have originated from an input operation.\nInput Source operations connected to node agent/VerifyFinite_1/CheckNumerics:\n agent/assert_equal_5/Assert/AssertGuard (defined at /home/cs229/anaconda3/lib/python3.8/site-packages/tensorforce/core/utils/tensor_spec.py:312)\t\n agent/StatefulPartitionedCall (defined at /home/cs229/anaconda3/lib/python3.8/site-packages/tensorforce/core/module.py:136)\n\nFunction call stack:\nact\n",
+     "evalue": "  : Tensor had NaN values\n\t [[node agent/VerifyFinite_1/CheckNumerics (defined at /home/cs229/anaconda3/lib/python3.8/site-packages/tensorforce/core/utils/tensor_spec.py:319) ]] [Op:__inference_act_34617]\n\nErrors may have originated from an input operation.\nInput Source operations connected to node agent/VerifyFinite_1/CheckNumerics:\n agent/assert_equal_5/Assert/AssertGuard (defined at /home/cs229/anaconda3/lib/python3.8/site-packages/tensorforce/core/utils/tensor_spec.py:312)\t\n agent/StatefulPartitionedCall (defined at /home/cs229/anaconda3/lib/python3.8/site-packages/tensorforce/core/module.py:136)\n\nFunction call stack:\nact\n",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mInvalidArgumentError\u001b[0m                      Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-876aa3d8faae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mterminal\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mactions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mact\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstates\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstates\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0mstates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mterminal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreward\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmy_ACF_Env\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mactions\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mactions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobserve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mterminal\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mterminal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreward\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mreward\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-39-876aa3d8faae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mterminal\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mactions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mact\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstates\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstates\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0mstates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mterminal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreward\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmy_ACF_Env\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mactions\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mactions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobserve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mterminal\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mterminal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreward\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mreward\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/tensorforce/agents/agent.py\u001b[0m in \u001b[0;36mact\u001b[0;34m(self, states, internals, parallel, independent, deterministic, evaluation)\u001b[0m\n\u001b[1;32m    413\u001b[0m             )\n\u001b[1;32m    414\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 415\u001b[0;31m         return super().act(\n\u001b[0m\u001b[1;32m    416\u001b[0m             \u001b[0mstates\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minternals\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minternals\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparallel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparallel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindependent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mindependent\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    417\u001b[0m             \u001b[0mdeterministic\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdeterministic\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/tensorforce/agents/recorder.py\u001b[0m in \u001b[0;36mact\u001b[0;34m(self, states, internals, parallel, independent, deterministic, **kwargs)\u001b[0m\n\u001b[1;32m    260\u001b[0m         \u001b[0;31m# fn_act()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    261\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_is_agent\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 262\u001b[0;31m             actions, internals = self.fn_act(\n\u001b[0m\u001b[1;32m    263\u001b[0m                 \u001b[0mstates\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minternals\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minternals\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparallel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparallel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindependent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mindependent\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    264\u001b[0m                 \u001b[0mdeterministic\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdeterministic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mis_internals_none\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mis_internals_none\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/tensorforce/agents/agent.py\u001b[0m in \u001b[0;36mfn_act\u001b[0;34m(self, states, internals, parallel, independent, deterministic, is_internals_none, num_parallel)\u001b[0m\n\u001b[1;32m    460\u001b[0m         \u001b[0;31m# Model.act()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    461\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mindependent\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 462\u001b[0;31m             actions, timesteps = self.model.act(\n\u001b[0m\u001b[1;32m    463\u001b[0m                 \u001b[0mstates\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mauxiliaries\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mauxiliaries\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparallel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparallel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    464\u001b[0m             )\n",
@@ -383,7 +382,7 @@
       "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/tensorflow/python/eager/function.py\u001b[0m in \u001b[0;36m_call_flat\u001b[0;34m(self, args, captured_inputs, cancellation_manager)\u001b[0m\n\u001b[1;32m   1961\u001b[0m         and executing_eagerly):\n\u001b[1;32m   1962\u001b[0m       \u001b[0;31m# No tape is watching; skip to running the function.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1963\u001b[0;31m       return self._build_call_outputs(self._inference_function.call(\n\u001b[0m\u001b[1;32m   1964\u001b[0m           ctx, args, cancellation_manager=cancellation_manager))\n\u001b[1;32m   1965\u001b[0m     forward_backward = self._select_forward_and_backward_functions(\n",
       "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/tensorflow/python/eager/function.py\u001b[0m in \u001b[0;36mcall\u001b[0;34m(self, ctx, args, cancellation_manager)\u001b[0m\n\u001b[1;32m    589\u001b[0m       \u001b[0;32mwith\u001b[0m \u001b[0m_InterpolateFunctionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    590\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcancellation_manager\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 591\u001b[0;31m           outputs = execute.execute(\n\u001b[0m\u001b[1;32m    592\u001b[0m               \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msignature\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    593\u001b[0m               \u001b[0mnum_outputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_num_outputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/tensorflow/python/eager/execute.py\u001b[0m in \u001b[0;36mquick_execute\u001b[0;34m(op_name, num_outputs, inputs, attrs, ctx, name)\u001b[0m\n\u001b[1;32m     57\u001b[0m   \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m     \u001b[0mctx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensure_initialized\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m     tensors = pywrap_tfe.TFE_Py_Execute(ctx._handle, device_name, op_name,\n\u001b[0m\u001b[1;32m     60\u001b[0m                                         inputs, attrs, num_outputs)\n\u001b[1;32m     61\u001b[0m   \u001b[0;32mexcept\u001b[0m \u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_NotOkStatusException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mInvalidArgumentError\u001b[0m:   : Tensor had NaN values\n\t [[node agent/VerifyFinite_1/CheckNumerics (defined at /home/cs229/anaconda3/lib/python3.8/site-packages/tensorforce/core/utils/tensor_spec.py:319) ]] [Op:__inference_act_1085]\n\nErrors may have originated from an input operation.\nInput Source operations connected to node agent/VerifyFinite_1/CheckNumerics:\n agent/assert_equal_5/Assert/AssertGuard (defined at /home/cs229/anaconda3/lib/python3.8/site-packages/tensorforce/core/utils/tensor_spec.py:312)\t\n agent/StatefulPartitionedCall (defined at /home/cs229/anaconda3/lib/python3.8/site-packages/tensorforce/core/module.py:136)\n\nFunction call stack:\nact\n"
+      "\u001b[0;31mInvalidArgumentError\u001b[0m:   : Tensor had NaN values\n\t [[node agent/VerifyFinite_1/CheckNumerics (defined at /home/cs229/anaconda3/lib/python3.8/site-packages/tensorforce/core/utils/tensor_spec.py:319) ]] [Op:__inference_act_34617]\n\nErrors may have originated from an input operation.\nInput Source operations connected to node agent/VerifyFinite_1/CheckNumerics:\n agent/assert_equal_5/Assert/AssertGuard (defined at /home/cs229/anaconda3/lib/python3.8/site-packages/tensorforce/core/utils/tensor_spec.py:312)\t\n agent/StatefulPartitionedCall (defined at /home/cs229/anaconda3/lib/python3.8/site-packages/tensorforce/core/module.py:136)\n\nFunction call stack:\nact\n"
      ]
     }
    ],
@@ -405,16 +404,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "28.691567451915905"
+       "28.329721767100267"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,31 +424,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.0e+00, 1.0e+00, 9.9e-01, 1.0e+00, 1.0e+00, 1.0e+00, 9.9e-01,\n",
-       "        1.0e+00, 9.9e-01, 9.9e-01, 9.9e-01, 1.0e+00, 9.9e-01, 9.9e-01,\n",
-       "        9.9e-01, 9.9e-01, 1.0e+00, 1.0e+00, 9.9e-01, 1.0e+00, 1.0e+00,\n",
-       "        1.0e+00, 1.0e+00, 9.9e-01, 9.9e-01, 9.9e-01, 9.9e-01, 9.9e-01,\n",
-       "        9.9e-01, 9.9e-01, 9.9e-01, 1.0e+00, 1.0e+00, 9.9e-01, 9.9e-01,\n",
-       "        1.0e+00, 1.0e+00, 1.0e+00, 9.9e-01, 1.0e+00, 9.9e-01, 9.9e-01,\n",
-       "        9.9e-01, 9.9e-01, 9.9e-01, 1.0e+00, 1.0e+00, 1.0e+00, 9.9e-01,\n",
-       "        1.0e+00],\n",
-       "       [1.9e+07, 2.0e+07, 1.9e+07, 2.0e+07, 1.9e+07, 2.0e+07, 2.0e+07,\n",
-       "        1.9e+07, 2.0e+07, 2.0e+07, 2.0e+07, 1.9e+07, 2.0e+07, 1.9e+07,\n",
-       "        2.0e+07, 2.0e+07, 2.0e+07, 2.0e+07, 1.9e+07, 1.9e+07, 1.9e+07,\n",
-       "        2.0e+07, 1.9e+07, 1.9e+07, 2.0e+07, 2.0e+07, 2.0e+07, 2.0e+07,\n",
-       "        1.9e+07, 1.9e+07, 2.0e+07, 1.9e+07, 2.0e+07, 2.0e+07, 2.0e+07,\n",
-       "        1.9e+07, 1.9e+07, 2.0e+07, 2.0e+07, 1.9e+07, 2.0e+07, 1.9e+07,\n",
-       "        1.9e+07, 1.9e+07, 2.0e+07, 2.0e+07, 1.9e+07, 1.9e+07, 1.9e+07,\n",
-       "        1.9e+07]], dtype=float32)"
+       "array([[9.9000001e-01, 1.0000000e+00, 1.0000000e+00, 1.0000000e+00,\n",
+       "        1.0000000e+00, 1.0000000e+00, 1.0000000e+00, 1.0000000e+00,\n",
+       "        1.0000000e+00, 1.0000000e+00, 9.9000001e-01, 9.9000001e-01,\n",
+       "        9.9000001e-01, 9.9000001e-01, 9.9000001e-01, 9.9000001e-01,\n",
+       "        1.0000000e+00, 1.0000000e+00, 9.9000001e-01, 1.0000000e+00,\n",
+       "        1.0000000e+00, 9.9000001e-01, 1.0000000e+00, 9.9000001e-01,\n",
+       "        1.0000000e+00, 1.0000000e+00, 1.0000000e+00, 1.0000000e+00,\n",
+       "        9.9000001e-01, 9.9000001e-01, 1.0000000e+00, 9.9000001e-01,\n",
+       "        9.9000001e-01, 1.0000000e+00, 9.9000001e-01, 9.9000001e-01,\n",
+       "        9.9000001e-01, 1.0000000e+00, 9.9000001e-01, 1.0000000e+00,\n",
+       "        9.9000001e-01, 9.9000001e-01, 9.9000001e-01, 9.9000001e-01,\n",
+       "        1.0000000e+00, 9.9000001e-01, 9.9000001e-01, 9.9000001e-01,\n",
+       "        9.9000001e-01, 1.0000000e+00],\n",
+       "       [1.2039454e+07, 1.0039454e+07, 1.2039454e+07, 1.2039454e+07,\n",
+       "        1.2039454e+07, 1.0039454e+07, 1.2039454e+07, 1.0039454e+07,\n",
+       "        1.0039454e+07, 1.0039454e+07, 1.0039454e+07, 1.0039454e+07,\n",
+       "        1.0039454e+07, 1.2039454e+07, 1.2039454e+07, 1.0039454e+07,\n",
+       "        1.2039454e+07, 1.0039454e+07, 1.0039454e+07, 1.0039454e+07,\n",
+       "        1.2039454e+07, 1.2039454e+07, 1.0039454e+07, 1.2039454e+07,\n",
+       "        1.0039454e+07, 1.2039454e+07, 1.0039454e+07, 1.0039454e+07,\n",
+       "        1.0039454e+07, 1.2039454e+07, 1.2039454e+07, 1.2039454e+07,\n",
+       "        1.0039454e+07, 1.0039454e+07, 1.0039454e+07, 1.0039454e+07,\n",
+       "        1.2039454e+07, 1.0039454e+07, 1.0039454e+07, 1.2039454e+07,\n",
+       "        1.2039454e+07, 1.2039454e+07, 1.0039454e+07, 1.2039454e+07,\n",
+       "        1.2039454e+07, 1.2039454e+07, 1.0039454e+07, 1.0039454e+07,\n",
+       "        1.0039454e+07, 1.2039454e+07]], dtype=float32)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
